Fix Missing resource filter type: 'org.eclipse.ui.ide.multiFilter'.